--- a/app/views/oldchunks/oldchunks.erb
+++ b/app/views/oldchunks/oldchunks.erb
@@ -108,7 +108,7 @@ color:white;
 }
 
 .oldchunk-text {
-      font-style: italic;
+    font-style: italic;
     /* font-weight: bold; */
     /* position: fixed; */
     font-size: 9px;
@@ -116,13 +116,12 @@ color:white;
     /* left: 183px; */
     /* top: 580px; */
     /* width: 1000px; */
-    height: 62px;
+    max-height: 62px;
     overflow: scroll;
     overflow-x: scroll;
     overflow-y: scroll;
     color: white;
-    margin-bottom: 10px;
-    
+    margin-bottom: 5px;
 
 }
 
