finally worked out all the css for the newchunks/newchunks view. Created a big wrapper inside of which the litte wrapper that includes all the iterators, the big wrapper has the scrolling function as new newchunks are added. The big wrapper is fixed. Its childelements are position:absolute, so they can repeat with iterators, but the whole thing can scroll.

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -24,7 +24,7 @@
 
     #log-out {
     font-family: Audiowide;
-    color:white;
+    color:#f1056e;
     position:fixed;
     left:27px;
     top:12px;
@@ -38,7 +38,7 @@
     }
 
     #log-out a{
-      color:white;
+      color:#f1056e;
       text-decoration:none;
       top:29px;
       left:28px;
